--- a/101/101chart/values.yaml
+++ b/101/101chart/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: docker.io
-  pullPolicy: IfNotPresent
+  repository:
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
