--- a/101/python/src/Dockerfile
+++ b/101/python/src/Dockerfile
@@ -1,4 +1,4 @@
-# This is a possible Dockerfile for the python code sample that counts from 0 to 100
+# This is a Dockerfile for the python code sample that counts from 0 to infinite
 FROM python:3.9-alpine
 WORKDIR /src
 COPY Program.py .
