--- a/201/201chart/templates/secretproviderclass.yaml
+++ b/201/201chart/templates/secretproviderclass.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider: azure
   secretObjects:
-  - secretName: credentialForACR
+  - secretName: credentialforacr
     type: kubernetes.io/dockerconfigjson
     data:
     - objectName: {{ .Values.keyvaultSecretName}}
