--- a/101/101chart/values.yaml
+++ b/101/101chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository:
+  repository: <your image repo>
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
